# Vision-Transformer-Workshop

./: .gitignore  1. Introduction to PyTorch.ipynb  2. Self Attention.ipynb  3. Vision Transformer.ipynb  LICENSE  Notebook.ipynb  README.md  environment.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: test.yml
src/: data_prep.py  data_prep_pretrained.py  model.py  plots.py  test_loop.py  train_loop.py
src/vit_model/: data_prep.py  data_prep_pretrained.py  main.py  model.py  plots.py  predict.py  test_loop.py  train_loop.py  train_test.py
tests/: test_model.py
