[metadata]
name = vision transformer
description = vision transformer model for geoscientific data
author = Adeniyi
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    vit_model
install_requires =
    requests>=2

python_requires = >=3.6
package_dir =
    =src
zip_safe = no